dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=africoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=africoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=africoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=africoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=africoin-wallet.1
endif
endif
